--- a/codelap-movie-korea.html
+++ b/codelap-movie-korea.html
@@ -38,6 +38,9 @@
             font-size: 20px;
             font-weight: bold;
         }
+        section ul{
+            margin-top: 20px;
+        }
 
         section ul a img{
             width: 250px;
@@ -45,11 +48,17 @@
             border-radius: 20px;
             display: inline;
             text-align: left;
+            margin-bottom: 20px;
         }
 
     </style>
     <script>
-
+        $(function() {
+            $(".slide_gallery").bxSlider({
+                auto: true,
+                autoControls: false,
+            });
+        });
     </script>
 <body>
     <header>
@@ -68,17 +77,17 @@
             <li>호러</li>
         </ul>
     </nav>
-    <section>
-        <ul>
-            <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "images/괴물.jpg"></a>
-            <a href="https://www.youtube.com/embed/DG7R5FMwoAM"><img src = "images/도둑들.jpg"></a>
-            <a href=""><img src = "images/7번방의 선물.jpg"></a>
-            <a href=""><img src = "images/광해.jpg"></a>
-            <a href=""><img src = "images/왕의 남자.jpg"></a>
-            <a href=""><img src = "images/태극기 휘날리며.jpg"></a>
-            <a href=""><img src = "images/해운대.jpg"></a>
-            <a href=""><img src = "images/실미도.jpg"></a>
-            <a href=""><img src = "images/국가대표.jpg"></a>
+    <section id="gallery_wrap">
+        <ul class="slide_gallery">
+            <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "images/kor_1.jpg"></a>
+            <a href="https://www.youtube.com/embed/DG7R5FMwoAM"><img src = "images/kor_2.jpg"></a>
+            <a href="https://www.youtube.com/embed/rvcN5uFf_VI"><img src = "images/kor_3.jpg"></a>
+            <a href="https://www.youtube.com/embed/E-LkaQgj0qM"><img src = "images/kor_4.jpg"></a>
+            <a href="https://www.youtube.com/embed/JfGpTWM-TNk"><img src = "images/kor_5.jpg"></a>
+            <a href="https://www.youtube.com/embed/DYE2aDl2RhI"><img src = "images/kor_6.jpg"></a>
+            <a href="https://www.youtube.com/embed/bETrnbq_OLM"><img src = "images/kor_7.jpg"></a>
+            <a href="https://www.youtube.com/embed/3PWIFA-ulP0"><img src = "images/kor_8.jpg"></a>
+            <a href="https://www.youtube.com/embed/PG7ftMRWO9c"><img src = "images/kor_9.jpg"></a>
         </ul>
     </section>
     <footer>
