--- a/codelap-movie-korea.html
+++ b/codelap-movie-korea.html
@@ -15,7 +15,8 @@
         }
         nav{
             background-color: white;
-            color: green;
+            /*color: green;*/
+            color : red;
             text-align: center;
         }
 
