JHLee commit complete

--- a/codelap-movie-jstest.html
+++ b/codelap-movie-jstest.html
@@ -56,8 +56,9 @@
             });
         });
     </script>
-    <script src="js/jquery.js"></script>
-    <script src="js/jquery.bxslider.min.js"></script>
+        <script src="js/jquery.js"></script>
+        <script src="js/jquery.bxslider.min.js">
+    </script>
 </head>
 <body>
 
