--- a/codelap-movie-jstest.html
+++ b/codelap-movie-jstest.html
@@ -10,6 +10,12 @@
             [1,"images/kor_1.jpg","괴물","송강오 등등","괴물이 나오는 영화"],
             [2,"images/kor_2.jpg","도둑들","김혜수 등등","도둑영화"],
             [3,"images/kor_3.jpg","7번방의 선물", "등등","감빵영화"],
+            [1,"images/kor_4.jpg","괴물","송강오 등등","괴물이 나오는 영화"],
+            [2,"images/kor_5.jpg","도둑들","김혜수 등등","도둑영화"],
+            [3,"images/kor_6.jpg","7번방의 선물", "등등","감빵영화"],
+            [1,"images/kor_7.jpg","괴물","송강오 등등","괴물이 나오는 영화"],
+            [2,"images/kor_8.jpg","도둑들","김혜수 등등","도둑영화"],
+            [3,"images/kor_9.jpg","7번방의 선물", "등등","감빵영화"],
         ];
 
         // var galleryItem = document.createElement("div");
@@ -39,8 +45,9 @@
                     $(".gallery").append("<div class='gallery-item'>" +
                         "<img src='" + movieArray[i][1] + "' alt='ab'>" +
 
-                        "<iframe style='display:none' width='100' height='100%' src='https://www.youtube.com/embed/64aNeYsa6Iw?autoplay=1&mute=1' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='0'></iframe>" +
-                        "<h4>" + movieArray[i][2] + "</h4></div>");
+                        "<iframe style='display:none' width='100' height='100%' src='#' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='0'></iframe>" +
+                        // "<iframe style='display:none' width='100' height='100%' src='https://www.youtube.com/embed/64aNeYsa6Iw?autoplay=1&mute=1' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='0'></iframe>" +
+                        "<h4>" + movieArray[i][3] + "</h4></div>");
 
                     // $(".gallery-item").after(")
                     // $(".gallery-item").after("");
@@ -53,6 +60,7 @@
                 }
                 $(this).find('img').hide();
                 $(this).find('iframe').show();
+                $(this).find('iframe').attr('src','https://www.youtube.com/embed/64aNeYsa6Iw?autoplay=1&mute=1');
                 // replaceWith("<iframe  width='100%' height='100%' src='https://www.youtube.com/embed/64aNeYsa6Iw?si=n4bl3OHNr9oq4I2r' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='0' ></iframe>");
             },function (){
                 $(this).find('iframe').hide();
