--- a/codelap-movie-romance.html
+++ b/codelap-movie-romance.html
@@ -12,8 +12,9 @@
     <header>
         공란
     </header>
+    <div class="ㅁ">
         <div class="main" >
-            <h2>이런영화 어때요?</h2>
+            <h3>이런영화 어때요?</h3>
         </div>
         <div class="main_1">
         <section>
@@ -62,7 +63,7 @@
                 </ul>
             </section>
 
-        </div>
-
+            </div>
+    </div>
 </body>
 </html>
