--- a/codelap-movie-korea.html
+++ b/codelap-movie-korea.html
@@ -80,15 +80,15 @@
     </nav>
     <section id="gallery_wrap">
         <ul class="slide_gallery">
-            <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "images/괴물.jpg"></a>
-            <a href="https://www.youtube.com/embed/DG7R5FMwoAM"><img src = "images/도둑들.jpg"></a>
-            <a href="https://www.youtube.com/embed/rvcN5uFf_VI"><img src = "images/7번방의 선물.jpg"></a>
-            <a href="https://www.youtube.com/embed/E-LkaQgj0qM"><img src = "images/광해.jpg"></a>
-            <a href="https://www.youtube.com/embed/JfGpTWM-TNk"><img src = "images/왕의 남자.jpg"></a>
-            <a href="https://www.youtube.com/embed/DYE2aDl2RhI"><img src = "images/태극기 휘날리며.jpg"></a>
-            <a href="https://www.youtube.com/embed/bETrnbq_OLM"><img src = "images/해운대.jpg"></a>
-            <a href="https://www.youtube.com/embed/3PWIFA-ulP0"><img src = "images/실미도.jpg"></a>
-            <a href="https://www.youtube.com/embed/PG7ftMRWO9c"><img src = "images/국가대표.jpg"></a>
+            <a href="https://www.youtube.com/embed/BHaPyxWrP_g"><img src = "images/kor_1.jpg"></a>
+            <a href="https://www.youtube.com/embed/DG7R5FMwoAM"><img src = "images/kor_2.jpg"></a>
+            <a href="https://www.youtube.com/embed/rvcN5uFf_VI"><img src = "images/kor_3.jpg"></a>
+            <a href="https://www.youtube.com/embed/E-LkaQgj0qM"><img src = "images/kor_4.jpg"></a>
+            <a href="https://www.youtube.com/embed/JfGpTWM-TNk"><img src = "images/kor_8.jpg"></a>
+            <a href="https://www.youtube.com/embed/DYE2aDl2RhI"><img src = "images/kor_7.jpg"></a>
+            <a href="https://www.youtube.com/embed/bETrnbq_OLM"><img src = "images/kor_9.jpg"></a>
+            <a href="https://www.youtube.com/embed/3PWIFA-ulP0"><img src = "images/kor_6.jpg"></a>
+            <a href="https://www.youtube.com/embed/PG7ftMRWO9c"><img src = "images/kor_5.jpg"></a>
         </ul>
     </section>
     <footer>
